[gd_scene load_steps=4 format=3 uid="uid://csce25rww2178"]

[ext_resource type="Script" path="res://addons/debug_parameters/AddParamBlock.gd" id="1_v7vdf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qaaoi"]
bg_color = Color(0.47451, 0.313726, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qom0"]
bg_color = Color(0.313726, 0.207843, 0.129412, 1)

[node name="AddParamBlock" type="Panel"]
custom_minimum_size = Vector2(150, 265)
offset_right = 150.0
offset_bottom = 339.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qaaoi")
script = ExtResource("1_v7vdf")

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
offset_left = 6.0
offset_top = 3.0
offset_right = 168.0
offset_bottom = 352.0

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
text = "Add a parameter"

[node name="TypeItemList" type="OptionButton" parent="GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Checkbox"
popup/item_0/id = 0
popup/item_1/text = "Text"
popup/item_1/id = 1
popup/item_2/text = "Number"
popup/item_2/id = 2
popup/item_3/text = "List"
popup/item_3/id = 3

[node name="SlugTextEdit" type="TextEdit" parent="GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
tooltip_text = "The slug to retrieve the set value  via DebugParameters::get_value(slug)"
placeholder_text = "Slug *"
draw_tabs = true
draw_spaces = true
scroll_fit_content_height = true

[node name="LabelTextEdit" type="TextEdit" parent="GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
placeholder_text = "Label"
scroll_fit_content_height = true

[node name="TooltipTextEdit" type="TextEdit" parent="GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
placeholder_text = "Tooltip"
scroll_fit_content_height = true

[node name="NumberContraint" type="GridContainer" parent="GridContainer"]
visible = false
layout_mode = 2
columns = 2

[node name="MinCheckBox" type="CheckBox" parent="GridContainer/NumberContraint"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Min."

[node name="MinSpinBox" type="SpinBox" parent="GridContainer/NumberContraint"]
layout_mode = 2
min_value = -1e+09
max_value = 1e+09
step = 0.0

[node name="MaxCheckBox" type="CheckBox" parent="GridContainer/NumberContraint"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Max."

[node name="MaxSpinBox" type="SpinBox" parent="GridContainer/NumberContraint"]
layout_mode = 2
min_value = -1e+09
max_value = 1e+09
step = 0.0

[node name="Label" type="Label" parent="GridContainer/NumberContraint"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Cast as"

[node name="CastAs" type="OptionButton" parent="GridContainer/NumberContraint"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
item_count = 2
popup/item_0/text = "integer"
popup/item_0/id = 0
popup/item_1/text = "float"
popup/item_1/id = 1

[node name="MaxValue" type="GridContainer" parent="GridContainer"]
layout_mode = 2
columns = 2

[node name="AvailableValues" type="TextEdit" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
tooltip_text = "Available values separated by a comma"
theme_override_font_sizes/font_size = 12
placeholder_text = "Available values"
scroll_fit_content_height = true

[node name="ExposeIndex" type="CheckBox" parent="GridContainer"]
visible = false
layout_mode = 2
tooltip_text = "Expose list's selected index instead of the displaeyd value"
theme_override_font_sizes/font_size = 10
text = "Expose index"

[node name="AddButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3qom0")
text = "Add"

[node name="CancelButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3qom0")
text = "Cancel"

[connection signal="pressed" from="GridContainer/AddButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
